# types/translations.go
@@ -24,18 +24,43 @@ type localeResponse struct {
 	Body Locale
 }
 
+// swagger:model Translation
 type Translations struct {
 	Entity
-	LocaleID         string
-	Project          string
-	Prefix           string
-	Value            string
-	Key              string
-	Title            string
-	Description      string
-	Aliases          []string
-	TagIDS           []string
-	Context          string
-	Variables        map[string]interface{}
-	ExampleVariables map[string]interface{}
+	TranslationInput
+}
+type TranslationInput struct {
+	LocaleID  string `json:"locale_id"`
+	ProjectID string `json:"project"`
+	// Can be a dot-separated path-like string
+	// example: store.products
+	Prefix string `json:"prefix"`
+	// The pre-interpolated value to use  with translations
+	// Example: The {{productName}} fires up to {{count}} bullets of {{subject}}.
+	Value string `json:"value"`
+	// Final part of the identifiying key.
+	// With the example-input, the complete generated key would be store.product.description
+	// example: description
+	Key string `json:"key"`
+	// Title with short description of the key
+	Title string `json:"title"`
+	// Description for the key, its use and where the key is used.
+	Description string   `json:"description"`
+	Aliases     []string `json:"aliases"`
+	Tag         []string `json:"tags"`
+	// Used as a variation for the key
+	Context string `json:"context"`
+	// Variables used within the translation.
+	// This helps with giving translators more context,
+	// The value for the translation will be used in examples.
+	// example: {"count": 3, "productName": "X-Buster", "subject": "compressed solar energy"}
+	Variables map[string]interface{} `json:"variables"`
+}
+
+// swagger:parameters createTranslation
+type translationInput struct {
+
+	// required:true
+	// in:body
+	Body TranslationInput
 }
